--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -76,6 +76,7 @@ body{
       margin-top: 50px;
     }
     .tab-left-menu {
+      display: block;
       width: 100%;
       height: 50px;
       line-height: 50px;
@@ -222,9 +223,11 @@ body{
   text-align: center;  
 }
 
-.debug-scroll {
+.debug-scroll.scroll-view {
   overflow: scroll;
   height: 100%; 
+  top: 0;
+  bottom: 0;
 }
 .scroll{
   height: 100%;
@@ -249,32 +252,15 @@ body{
     color: #fff;
     background-color: #0099ff;
     padding: 10px 10px 10px 15px;
-    
-  /*&::after {
-    content: '';
-    border: solid 20px;
-    border-color: transparent transparent red;
-    position: relative;
-    float: right;
-    top: 13px;
-    left: 0px;
-  }*/
 }
+
 
 .message.from {
     float: left;
     background-color: #ececec;
     padding: 10px 10px 10px 15px;
-  
- /* &::before{
-    content: '';
-    border: solid 20px;
-    border-color: transparent transparent red;
-    position: relative;
-    z-index: 1;
-    top: 13px;
-    left: -25px;
-  }*/
+    color: black !important;
+
 }
 
 .bar-footer {
