--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -7719,6 +7719,7 @@ body {
     body .menu-left .tabs-left-menu {
       margin-top: 50px; }
     body .menu-left .tab-left-menu {
+      display: block;
       width: 100%;
       height: 50px;
       line-height: 50px; }
@@ -7832,9 +7833,11 @@ body {
 .bar-dark .title {
   text-align: center; }
 
-.debug-scroll {
+.debug-scroll.scroll-view {
   overflow: scroll;
-  height: 100%; }
+  height: 100%;
+  top: 0;
+  bottom: 0; }
 
 .scroll {
   height: 100%; }
@@ -7856,30 +7859,13 @@ body {
   float: right;
   color: #fff;
   background-color: #0099ff;
-  padding: 10px 10px 10px 15px;
-  /*&::after {
-    content: '';
-    border: solid 20px;
-    border-color: transparent transparent red;
-    position: relative;
-    float: right;
-    top: 13px;
-    left: 0px;
-  }*/ }
+  padding: 10px 10px 10px 15px; }
 
 .message.from {
   float: left;
   background-color: #ececec;
   padding: 10px 10px 10px 15px;
-  /* &::before{
-    content: '';
-    border: solid 20px;
-    border-color: transparent transparent red;
-    position: relative;
-    z-index: 1;
-    top: 13px;
-    left: -25px;
-  }*/ }
+  color: black !important; }
 
 .bar-footer {
   overflow: visible !important; }
